[package]
authors = ["RustCrypto Developers"]
categories = ["cryptography", "cryptography::cryptocurrencies", "no-std"]
description = """
secp256k1 elliptic curve library written in pure Rust with support for ECDSA
signing/verification/public-key recovery, Taproot Schnorr signatures (BIP340),
Elliptic Curve Diffie-Hellman (ECDH), and general-purpose secp256k1 elliptic
curve group operations which can be used to implement arbitrary protocols
"""
documentation = "https://docs.rs/k256"
edition = "2021"
keywords = ["bitcoin", "crypto", "ecc", "ethereum", "secp256k1"]
license = "Apache-2.0 OR MIT"
name = "k256"
readme = "README.md"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/k256"
rust-version = "1.65"
version = "0.13.2"

[dependencies]
cfg-if = "1.0"
elliptic-curve = {workspace = true, default-features = false, features = ["hazmat", "sec1"]}

# optional dependencies
ecdsa-core = {version = "0.16.8", package = "ecdsa", optional = true, default-features = false, features = ["der"]}
hex-literal = {version = "0.4", optional = true}
once_cell = {version = "1.18", optional = true, default-features = false}
serdect = {version = "0.2", optional = true, default-features = false}
sha2 = {version = "0.10", optional = true, default-features = false}
signature = {version = "2", optional = true}

[dev-dependencies]
blobby = "0.3"
criterion = "0.5"
ecdsa-core = {version = "0.16", package = "ecdsa", default-features = false, features = ["dev"]}
hex-literal = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
proptest = "1.4"
rand_core = {version = "0.6", features = ["getrandom"]}
sha3 = {version = "0.10", default-features = false}

[features]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc"]
default = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "schnorr", "std"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std", "once_cell?/std"]

arithmetic = ["elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
critical-section = ["once_cell/critical-section", "precomputed-tables"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/signing", "ecdsa-core/verifying", "sha256"]
expose-field = ["arithmetic"]
hash2curve = ["arithmetic", "elliptic-curve/hash2curve"]
jwk = ["elliptic-curve/jwk"]
pem = ["ecdsa-core/pem", "elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa-core/pkcs8", "elliptic-curve/pkcs8"]
precomputed-tables = ["arithmetic", "once_cell"]
schnorr = ["arithmetic", "sha256", "signature"]
serde = ["ecdsa-core/serde", "elliptic-curve/serde", "serdect"]
sha256 = ["digest", "sha2"]
test-vectors = ["hex-literal"]

[package.metadata.docs.rs]
features = ["ecdh", "ecdsa", "schnorr"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "ecdsa"
required-features = ["ecdsa", "sha256"]

[[bench]]
harness = false
name = "field"
required-features = ["expose-field"]

[[bench]]
harness = false
name = "scalar"
