[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "algorithms"]
description = "Verifiable Secret Sharing Schemes for splitting, combining and verifying secret shares"
documentation = "https://docs.rs/vsss-rs"
edition = "2021"
homepage = "https://github.com/mikelodder7/vsss-rs"
keywords = ["crypto", "sharing", "secret", "verifiable"]
license = "Apache-2.0 OR MIT"
name = "vsss-rs"
readme = "README.md"
repository = "https://github.com/mikelodder7/vsss-rs"
version = "3.3.1"

[features]
alloc = ["rand_core/alloc", "rand/alloc", "serde/alloc"]
# curve25519 = ["curve25519-dalek", "serde", "hex"]
default = ["std"]
std = ["rand_core/std", "rand/std", "serde/std"]

[dependencies]
# curve25519-dalek = {version = "4.0.0", features = ["digest", "legacy_compatibility", "rand_core"], optional = true}
# curve25519-dalek = {workspace = true, features = ["digest", "legacy_compatibility", "rand_core"], optional = true}
# curve25519-dalek = {workspace = true, features = ["digest", "legacy_compatibility", "rand_core"], optional = true}
# curve25519-dalek = {workspace = true, optional = true}
# elliptic-curve = {version = "0.13", features = ["ecdh"]}
# elliptic-curve = {workspace = true, features = ["ecdh"]}
elliptic-curve = {workspace = true}
hex = {version = "0.4", default-features = false, optional = true}
rand = {version = "0.8", default-features = false}
rand_chacha = {version = "0.3", default-features = false}
rand_core = "0.6"
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true}
subtle = {version = "2.5"}
thiserror-no-std = "2.0"
zeroize = {workspace = true, features = ["zeroize_derive"]}

# [dev-dependencies]
# bls12_381_plus = "0.8"
# # ed25519-dalek = {workspace = true}
# k256 = {workspace = true, features = ["arithmetic", "bits"]}
# p256 = {version = "0.13", features = ["arithmetic", "bits"]}
# rand_xorshift = "0.3"
# rstest = "0.18"
# serde_bare = "0.5"
# serde_json = "1.0"
# sha2 = "0.10"
# x25519-dalek = {version = "2.0.0", features = ["static_secrets"]}
