[package]
name = "avm"
version = "0.29.0"
rust-version = "1.60"
edition = "2021"

[[bin]]
name = "avm"
path = "src/main.rs"

[[bin]]
name = "anchor"
path = "src/anchor/main.rs"

[dependencies]
anyhow = "1.0.75"
cfg-if = "1.0.0"
cargo_toml = "0.15.3"
clap = { version = "4.4.8", features = ["derive"] }
dirs = "4.0.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.20"
serde = { version = "1.0.192", features = ["derive"] }
tempfile = "3.8.1"
