[package]
name = "anchor-client"
version = "0.29.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
rust-version = "1.60"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Anchor programs"

[features]
async = []
debug = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.29.0" }
anyhow = "1"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
solana-account-decoder = "1.17"
solana-client = "1.17"
solana-sdk = "1.17"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
url = "2"
