[package]
edition = "2021"
name = "icpx_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# anoncreds = {git = "https://github.com/berendsliedrecht/anoncreds-rs", branch = "wasm", default-features = false, features = ["wasm"]}
# anoncreds = {git = "https://github.com/hyperledger/anoncreds-rs", default-features = false}
# anoncreds = {git = "https://github.com/hyperledger/anoncreds-rs", default-features = false}
bbs_plus = {version = "*", default-features = false} 
candid = "0.9" 
hex = "0.4.3" 
ic-cdk = "0.11" 
ic-cdk-macros = "0.8.1" 
ic-cdk-timers = "0.5" # Feel free to remove this dependency if you don't need timers
serde = {version = "1.0.192", default-features = false} 
serde_json = {version = "1.0.108", default-features = false} 
# serde = {version = "1.0", features = ["derive"]}
# sion = {path = "../../../crates/sion"}
# credx = {git = "https://github.com/hyperledger/anoncreds-v2-rs"}

[dependencies.anoncreds]
default_features = false
features = ["wasm", "serde_only"]
path = "../../../crates/anoncreds-wasm"
