[package]
edition = "2021"
name = "icpx_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bbs_plus = {version = "*", default-features = false}
# bcs = "0.1.6"
# bs58 = "0.5.0"
candid = "0.9"
credx = {path = "../../../crates/credx", default-features = false, features = ["wasm"]}
# hex = "0.4.3"
ic-cdk = "0.11" 
ic-cdk-macros = "0.8.1" 
ic-cdk-timers = "0.5" # Feel free to remove this dependency if you don't need timers
serde = {version = "1.0", features = ["derive"]} 
serde_json = {version = "1.0.108", default-features = false, features = ["alloc"]}
